# EA_Node

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PROGRAM_REQUIREMENTS.txt  README.md  RELEASE_NOTES.md  TODO.md  dene.sfe  dene2.sfe  dene3.sfe  deneme.py  dpf_viewer_variants.html  ea_node_editor.spec  edge_crossing_variants.html  floating_toolbar_ownership_variants.html  loading_screen_variants.html  main.py  node_overlay_button_style_variants.html  node_overlay_button_variants.html  port_value_locking_variants.html  preview_themes.py  pyproject.toml  requirements.txt
.design_bundle_opening_screen/: README.md
.design_bundle_opening_screen/chats/: chat1.md
.design_bundle_opening_screen/project/: Opening Screen v2.html  Opening Screen v3.html  Opening Screen.html
PLANS_TO_IMPLEMENT/: Global Expand Collision Avoidance and Comment Peek.md  PLAN_REPO_OVERLAY.md  PLAN_TEMPLATE.md
PLANS_TO_IMPLEMENT/completed/: Backend Preparation for an Optional DPF Autogenerated Plugin.md  COREX Clean Architecture Restructure.md  Execution_Edge_Progress_Visualization.md  Global Expand Collision Avoidance and Comment Peek.md  Media And Viewer Content Fullscreen.md  Persistent_Node_Elapsed_Times.md  ansys_dpf_full_plugin_rollout.md  color_picker_support_for_raw_hex_inputs.md  dpf_operator_node_help_panel.md  (+3 more)
corex_node_editor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
devtools/: __init__.py  work_packet_monitor.py  work_packet_thread.py
docs/: ARCHITECTURE_AUDIT_2026-03-25.md  ARCHITECTURE_FOLLOWUP_REVIEW_2026-04-01.md  ARCHITECTURE_MAINTAINABILITY_REVIEW_2026-03-28.md  ARCHITECTURE_RESIDUAL_REVIEW_2026-04-03.md  Cross-Process Viewer Backend Framework for Embedded DPF Sessions.md  DPF_OPERATOR_PLUGIN_BACKEND_REVIEW_2026-04-12.md  GETTING_STARTED.md  PACKAGING_WINDOWS.md  PILOT_RUNBOOK.md  PLAN_Global_Gap_Break_Edge_Crossing_Variant.md  PLAN_Node_Execution_Visualization.md  UI_CONTEXT_SCALABILITY_FOLLOWUP_REVIEW_2026-04-05.md  UI_CONTEXT_SCALABILITY_REVIEW_2026-04-04.md  dpf_viewer_ui_concepts.html  fix_empty_proxy_pane_on_viewer_blur.md  node_execution_visualization_alternatives.html
ea_node_editor/: __init__.py  app.py  app_preferences.py  bootstrap.py  graph_theme_defaults.py  passive_style_normalization.py  pytest_defaults.py  settings.py  work_packet_runner.py  work_packet_thread.py
mockups/: COREX Comments - Unified Variants.standalone.html  add_comment_mockups.html  add_comment_unified.html  add_comment_unified_polished_variants.html
scripts/: build_dpf_operator_doc_index.py  build_windows_installer.ps1  build_windows_package.ps1  check_context_budgets.py  check_markdown_links.py  check_traceability.py  export_architecture_diagrams.py  generate_app_icons.py  generate_dpf_operator_docs.py  miso_curve_builder.py  preview_p07_flowchart_surfaces.py  profile_canvas_lag.py  run.sh  run_verification.py  run_work_packet_thread.py  run_work_packets.py  sign_release_artifacts.ps1  verification_manifest.py  work_packet_gui.ps1  work_packet_gui.py  wt2
tests/: conftest.py  graph_surface_pointer_regression.py  passive_property_editor_fixtures.py  qt_wait.py  shell_isolation_controller_targets.py  shell_isolation_main_window_targets.py  shell_isolation_runtime.py  test_app_icon.py  test_app_preferences.py  test_app_preferences_import_defaults.py  test_architecture_boundaries.py  test_comment_backdrop_clipboard.py  test_comment_backdrop_collapse.py  test_comment_backdrop_contracts.py  test_comment_backdrop_interactions.py  test_comment_backdrop_layer.py  test_comment_backdrop_membership.py  test_content_fullscreen_bridge.py  test_context_budget_guardrails.py  test_dead_code_hygiene.py  test_decorator_sdk.py  test_decorator_sdk_rc2.py  test_dene3_dpf_showcase.py  test_dpf_compute_nodes.py  test_dpf_contracts.py  test_dpf_generated_helper_catalog.py  test_dpf_generated_operator_catalog.py  test_dpf_library_taxonomy.py  test_dpf_materialization.py  test_dpf_node_catalog.py  test_dpf_operator_help_lookup.py  test_dpf_operator_help_markdown.py  test_dpf_property_groups.py  test_dpf_runtime_materialization_camera.py  test_dpf_runtime_service.py  test_dpf_viewer_node.py  test_dpf_viewer_widget_binder.py  test_dpf_workflow_helpers.py  test_embedded_viewer_overlay_manager.py  test_execution_artifact_refs.py  (+93 more)
(+3519 files in other folders)
