[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corex-node-editor"
version = "0.1.0"
description = "A visual node editor for engineering dataflow pipelines, HPC job monitoring, and calculation workflows."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
    "psutil>=5.9",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
hpc = ["paramiko>=3.3"]
all = [
    "openpyxl>=3.1",
    "paramiko>=3.3",
]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "pyinstaller>=6.0",
    "openpyxl>=3.1",
    "paramiko>=3.3",
]

[project.scripts]
corex-node-editor = "ea_node_editor.bootstrap:main"

[project.entry-points."ea_node_editor.plugins"]

[tool.setuptools.packages.find]
include = ["ea_node_editor*"]

[tool.setuptools.package-data]
ea_node_editor = [
    "assets/app_icon/*.svg",
    "assets/app_icon/*.png",
    "assets/app_icon/*.ico",
    "ui_qml/*.qml",
    "ui_qml/**/*.qml",
    "ui_qml/**/*.js",
    "ui_qml/**/*.svg",
    "ui/theme/icons/*.svg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gui: marks tests requiring Qt GUI",
]
addopts = "--strict-markers"
